// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar adds additionalClasses props to wrapping span 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center testClass"
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="20"
      src="https://example.com/test.png"
      title="common.avatarOf"
      width="20"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      Boaty McBoatFace
    </span>
  </span>
</div>
`;

exports[`UserAvatar does not show names if showName prop is false 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="20"
      src="https://example.com/test.png"
      title="common.avatarOf"
      width="20"
    />
  </span>
</div>
`;

exports[`UserAvatar renders the user avatar correctly 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="20"
      src="https://example.com/test.png"
      title="common.avatarOf"
      width="20"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      Boaty McBoatFace
    </span>
  </span>
</div>
`;

exports[`UserAvatar renders the user avatar in size lg 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="30"
      src="https://example.com/test.png"
      title="common.avatarOf"
      width="30"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      Boaty McBoatFace
    </span>
  </span>
</div>
`;

exports[`UserAvatar renders the user avatar in size sm 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="16"
      src="https://example.com/test.png"
      title="common.avatarOf"
      width="16"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      Boaty McBoatFace
    </span>
  </span>
</div>
`;

exports[`UserAvatar uses custom photo component if provided 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <div>
      Custom Photo
    </div>
    <span
      class="ms-2 me-1 user-line-name"
    >
      No face user
    </span>
  </span>
</div>
`;

exports[`UserAvatar uses custom photo component preferred over photoUrl 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <div>
      Custom Photo
    </div>
    <span
      class="ms-2 me-1 user-line-name"
    >
      Boaty McBoatFace
    </span>
  </span>
</div>
`;

exports[`UserAvatar uses identicon when empty photoUrl is given 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="20"
      src="data:image/x-other,identicon-mock"
      title="common.avatarOf"
      width="20"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      Empty
    </span>
  </span>
</div>
`;

exports[`UserAvatar uses identicon when no photoUrl is given 1`] = `
<div>
  <span
    class="d-inline-flex align-items-center "
  >
    <img
      alt="common.avatarOf"
      class="rounded user-image"
      height="20"
      src="data:image/x-other,identicon-mock"
      title="common.avatarOf"
      width="20"
    />
    <span
      class="ms-2 me-1 user-line-name"
    >
      No face user
    </span>
  </span>
</div>
`;
